--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
               </ul>
             </li>
             <li class="nav-item">
+              <a class="nav-link text-light" href="#workExperience">
+                Work Experience
+              </a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link text-light" href="#contactMe">Contact Me</a>
             </li>
           </ul>
@@ -359,56 +364,97 @@
       </div>
     </div>
 
-    <div class="bg-dark pb-5 jump" id="contactMe">
-      <h1 class="text-center text-light pt-1">Contact Me</h1>
-      <div class="container-fluid col-6">
-        <ul class="list-group">
-          <a
-            href="https://www.linkedin.com/in/maxmaillet/"
-            class="list-group-item list-group-item-action border-secondary"
-            aria-current="true"
-          >
-            <img
-              src="https://clipground.com/images/linkedin-clipart-5.jpg"
-              width="32"
-              height="32"
-            />
-            LinkedIn
-          </a>
-          <a
-            href="mailto: max.maillet2002@gmail.com"
-            class="list-group-item list-group-item-action border-secondary"
-          >
-            <img
-              src="https://pic.onlinewebfonts.com/svg/img_533640.png"
-              width="32"
-              height="22"
-            />
-            Email
-          </a>
-          <a
-            href="https://github.com/maxmaillet"
-            class="list-group-item list-group-item-action border-secondary"
-          >
-            <img
-              src="https://raw.githubusercontent.com/Automattic/social-logos/trunk/svg-min/github.svg"
-              width="32"
-              height="32"
-            />
-            GitHub
-          </a>
-          <a
-            href="https://music.apple.com/profile/maxmaillet"
-            class="list-group-item list-group-item-action border-secondary"
-          >
-            <img
-              src="https://image.librewiki.net/0/0b/Apple_Music_%EC%95%84%EC%9D%B4%EC%BD%98.svg"
-              width="32"
-              height="32"
-            />
-            Apple Music
-          </a>
-        </ul>
+    <div class="bg-dark pb-5 jump" id="workExperience">
+      <h1 class="text-center text-light pt-1">Work Experience</h1>
+      <div class="container-fluid">
+        <div
+          class="container-fluid col-11 col-sm-10 col-lg-9 col-xl-8 col-xxl-6 my-2"
+        >
+          <div class="card">
+            <div class="card-body">
+              <h4 class="card-title">Sunrise Records</h4>
+              <h5 class="card-title">Keyholder</h5>
+              <h6 class="card-title">September 2020 - Present</h6>
+              <ul class="card-text">
+                <li>Open and close store</li>
+                <li>Operate cash register</li>
+                <li>Receive and sticker new stock</li>
+                <li>Update sales tracking spreadsheets</li>
+                <li>Send end of day progress and sales emails</li>
+              </ul>
+            </div>
+          </div>
+          <div class="card mt-3">
+            <div class="card-body">
+              <h4 class="card-title">Staples</h4>
+              <h5 class="card-title">Tech Associate</h5>
+              <h6 class="card-title">October 2019 - September 2020</h6>
+              <ul class="card-text">
+                <li>Set up computers, tablets, and phones for customers</li>
+                <li>
+                  Helped customers find the tech devices and services that best
+                  fit their needs
+                </li>
+                <li>Cleaned and inspected demo equipment</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="bg-light pb-5 jump" id="contactMe">
+      <h1 class="text-center text-dark pt-1">Contact Me</h1>
+      <div class="container-fluid col-8 col-sm-6 card bg-dark">
+        <div class="card-body">
+          <ul class="list-group">
+            <a
+              href="https://www.linkedin.com/in/maxmaillet/"
+              class="list-group-item list-group-item-action fs-5"
+              aria-current="true"
+            >
+              <img
+                src="https://clipground.com/images/linkedin-clipart-5.jpg"
+                width="32"
+                height="32"
+              />
+              LinkedIn
+            </a>
+            <a
+              href="mailto: max.maillet2002@gmail.com"
+              class="list-group-item list-group-item-action fs-5"
+            >
+              <img
+                src="https://pic.onlinewebfonts.com/svg/img_533640.png"
+                width="32"
+                height="22"
+              />
+              Email
+            </a>
+            <a
+              href="https://github.com/maxmaillet"
+              class="list-group-item list-group-item-action fs-5"
+            >
+              <img
+                src="https://raw.githubusercontent.com/Automattic/social-logos/trunk/svg-min/github.svg"
+                width="32"
+                height="32"
+              />
+              GitHub
+            </a>
+            <a
+              href="https://music.apple.com/profile/maxmaillet"
+              class="list-group-item list-group-item-action fs-5"
+            >
+              <img
+                src="https://image.librewiki.net/0/0b/Apple_Music_%EC%95%84%EC%9D%B4%EC%BD%98.svg"
+                width="32"
+                height="32"
+              />
+              Apple Music
+            </a>
+          </ul>
+        </div>
       </div>
     </div>
   </body>
