hobbies section incoming?

--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
         class="container-fluid text-light col-11 col-sm-10 col-lg-8 col-xl-6 pt-4 fs-5"
       >
         &emsp;Hey, my name's Max. I'm an aspiring software developer and
-        currently a student at NBCC graduating in June 2023, in my free time you
-        can catch me spinning some records or watching the Boston Celtics. Over
-        the past two years I've gained experience in C# with Windows Forms and
-        ASP.NET and in Java with Java SE and Java EE, I've also built responsive
-        web apps using Bootstrap 5, React, node.js, and PHP. I also have
-        experience using both MySQL and MongoDB databases. Feel free to contact
-        me anytime.
+        currently a student at NBCC graduating in June 2023. Over the past two
+        years I've gained experience in C# with Windows Forms and ASP.NET, in
+        Java with Java SE and Java EE, and I've built responsive web apps using
+        Bootstrap 5, React, node.js, and PHP. I also have experience using both
+        MySQL and MongoDB databases. In my free time you can catch me spinning
+        some records or watching the Boston Celtics. Feel free to contact me
+        anytime.
       </p>
     </div>
 
